--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         </div>
         
         
-        <div class="image">
+        <div class="image unactive">
             <img src="cloud.png" alt="">
         </div>
-        <div class="info">
+        <div class="info unactive">
             <h1 class="temp">7°C <h1>
-            <div class="cityName">Delhi</div>
+            <div class="cityName unactive">Delhi</div>
         </div>
 
-        <div class="otherInfo">
+        <div class="otherInfo unactive">
             <div class="humidity">
                 <div class="logo">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none" style="filter: invert(1);">
